<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello backlog-android-client!</string>
    <string name="app_name">backlog-android-client</string>
    <string name="setting">設定</string>
    <string name="reload">更新</string>
    <string name="spaceIdTitle">スペースID </string>
    <string name="spaceId_title">スペースID </string>
    <string name="spaceId_summary">スペースIDを入力してください。\nex. \n  https://example.backlog.jp\n この場合は"examle"を入力 </string>
    <string name="username_title">ユーザ名</string>
    <string name="username_summary">ログイン時に利用するユーザ名</string>
    <string name="password_title">パスワード </string>
    <string name="password_summary">パスワードを入力してください</string>
    <string name="nodata">Projectが存在しません。</string>
    <string name="timeline">タイムライン</string>
    <string name="assigned">assigned</string>
    <string name="created_user">created by</string>
    <string name="showComment">コメントを表示</string>
    <string name="search">検索</string>
    <string name="add_comment">コメントを追加する</string>
    <string name="changeStatus">ステータスを変更</string>
    <string name="status">ステータス</string>
    <string name="resolution">完了理由</string>
    <string name="updateComponent">項目を更新</string>
    <string name="comment">コメント</string>
</resources>
